Add recipe note file frontend (#14)
The m4b workflow. Adds the ability to manage files for a note. Very
similar to the system for adding files to recipes.
